opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_core"
bug-reports: "https://github.com/janestreet/ppx_core/issues"
dev-repo: "git+https://github.com/janestreet/ppx_core.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_core" "--root" "." "-j" jobs "@install"]
]
depends: [
  "base"
  "jbuilder"              {build & >= "1.0+beta8"}
  "ocaml-compiler-libs"
  "ppx_ast"
  "ppx_traverse_builtins"
  "stdio"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Standard library for ppx rewriters

Part of the Jane Street's PPX rewriters collection.
"
