opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_core"
bug-reports: "https://github.com/janestreet/ppx_core/issues"
dev-repo: "git+https://github.com/janestreet/ppx_core.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppxlib"                {>= "v0.11.0"}
  "stdio"
  "jbuilder"              {build & >= "1.0+beta12"}
  "ocaml-compiler-libs"   {>= "v0.10.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Standard library for ppx rewriters

Part of the Jane Street's PPX rewriters collection.
"
